--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       <li>
         <app-user
           [user]="user"
+          [isSelected]="user.id === selectedUserId"
           (select)="onSelectUser($event)"
         />
       </li>
@@ -13,7 +14,7 @@
   </ul>
 
   @if (selectedUser){
-    <app-tasks [name]="selectedUser.name"></app-tasks>
+    <app-tasks [userId]="selectedUser.id"  [name]="selectedUser.name"></app-tasks>
   } @else {
     <p id="fallback">A user to see their tasks</p>
   }
