--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,11 @@
-<div>
-  <button (click)="onSelectUser()" >
+<app-card>
+  <button
+    [class.active]="isSelected"
+    (click)="onSelectUser()" >
     <img
       [src]="imagePath"
       [alt]="user.name"
     />
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
